--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,9 @@ Noteworthy changes in Oleo 1.99.3 :
 - Oleo now handles noa0 cell addresses of not only its own format
   (such as RC[-2:-3]), but also RC[-2]:RC[-1] - which was needed for
   reading SYLK files.
+- Printing is being restructured. PostScript, Epson Stylus Color, and
+  PCL support are on the drawing board - only PostScript currently
+  prints reasonable things.
 
 ===== Oleo 1.99.1 =====
 
