--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+===== Oleo 1.99.4 =====
+
+Mostly released for a couple of bugfixes.
+They're in the ChangeLog.
+
 ===== Oleo 1.99.3 =====
 
 Noteworthy changes in Oleo 1.99.3 :
