--- a/TODO
+++ b/TODO
@@ -1,6 +1,15 @@
-$Id: TODO,v 1.25 1999/04/12 13:50:19 danny Exp $
+$Id: TODO,v 1.26 1999/06/04 08:01:39 danny Exp $
 
 TODO's:
+
+* Regions
+	(todo) Use Mark and Current Cell to define a region and
+		get region commands to work on this.
+
+* Move vs. Copy
+	(todo) Region copy as well as move changes relative coordinates
+		in formulas. For move operations this should probably
+		not happen.
 
 * Configuration
  	(done) fail on funky options --with-motif --without-Xbae
@@ -10,11 +19,11 @@ TODO's:
 
 * Printing
 	(todo) parameterize printing
-	(todo) make printing more intelligent
+	(busy) make printing more intelligent
 	(todo) printing large region shows a scaling bug.
 	       Try printing A1:AZ255.
-	(todo) implement PCL printing (see www.wotsit.org)
-	(todo) improve appearance of PostScript prints
+	(busy) implement PCL printing (see www.wotsit.org)
+	(busy) improve appearance of PostScript prints
 	(todo) fix precision handling in prints
 
 * Get our stuff together for an upcoming 2.0 release of Oleo.
@@ -34,8 +43,8 @@ TODO's:
 	(todo) print dialog
 	 ****  which range is the complete spreadsheet
 		-> (io-motif.c ReallyPrintCB)
-	 ****  allow selecting what format to print (not only PostScript ?)
-	(todo) make selecting cells and ranges more user friendly
+	(done) allow selecting what format to print (not only PostScript ?)
+	(done) make selecting cells and ranges more user friendly
 
 * Include texi2html in the oleo source, and enhance it so it can
   process all the texinfo commands used in the documentation.
@@ -54,6 +63,7 @@ TODO's:
 	(todo) figure out how to print on monochrome printers
 
 * Integrate GSL (Gnu Scientific Library).
+	(todo) integrate it
   The GSL is a collection of routines for numerical analysis,
   which we happen to be lacking in Oleo.
 
@@ -82,9 +92,6 @@ TODO's:
 * Get i18n to work right.
 
 * Figure out why having kinput2 present kills oleo.
-
-* Get character mode oleo to work from a Motif executable.
-	Exact bug description ?
 
 * Build a graph to figure out in which order to recalculate, then
   also use it to speed up recalculation.
