--- a/TODO
+++ b/TODO
@@ -1,6 +1,14 @@
-$Id: TODO,v 1.26 1999/06/04 08:01:39 danny Exp $
+$Id: TODO,v 1.27 1999/06/10 21:50:52 danny Exp $
 
 TODO's:
+
+* Motif
+	(todo) Handle interaction between formula editor and Xbae better.
+	(todo) User preferences (color, font, ..)
+	(done) Where does the beep come from ? (enter 1.123 in a cell)
+		Column MaxLengths weren't set (correctly), therefore an XbaeMatrix
+		column would get the width assigned to it and apply that to the
+		editable text in there as well.
 
 * Regions
 	(todo) Use Mark and Current Cell to define a region and
