--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-$Id: ChangeLog,v 1.96 1999/07/10 07:38:11 danny Exp $
+$Id: ChangeLog,v 1.97 1999/07/12 16:15:11 danny Exp $
+
+Mon 12 Jul 18:02:51 1999, Danny Backx
+	* Release Oleo 1.99.5
+	* A couple of minor fixes.
 
 Sat 10 Jul 09:40:13 1999, Danny Backx
 	* Work on PostScript printing.
