--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+===== Oleo 1.99.6 =====
+
+Database access (MySQL), internal cleanup of the source code,
+and user interface improvements.
+
 ===== Oleo 1.99.4 =====
 
 Mostly released for a couple of bugfixes.
