--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-$Id: ChangeLog,v 1.103 1999/09/02 22:53:35 danny Exp $
+$Id: ChangeLog,v 1.104 1999/09/06 21:33:03 danny Exp $
+
+	* Changes to get things to compile without mysql
+	  around.
 
 Fri  3 Sep 00:56:31 1999, Danny Backx
 	* A bugfix prompted by Dag Nygren's report that
