--- a/doc/functions.texi
+++ b/doc/functions.texi
@@ -33,26 +33,26 @@ arguments have any other value instead, the function returns
 @code{#NON_BOOL} as an error.
 
 @table @code
- @item if(@var{bool}, @var{val1}, @var{val2})
-  @findex if
+@item if(@var{bool}, @var{val1}, @var{val2})
+@findex if
   If @var{bool} is @code{#TRUE}, then @var{val1} is returned.  If
 @var{bool} is @code{#FALSE}, @var{val2} is returned.
- @item and(@var{bool1}, @var{bool2})
-  @findex and
+@item and(@var{bool1}, @var{bool2})
+@findex and
   Returns @code{#TRUE} if and only if both arguments are @code{#TRUE},
 otherwise returns @code{#FALSE}.
- @item or(@var{bool1}, @var{bool2})
-  @findex or
+@item or(@var{bool1}, @var{bool2})
+@findex or
   Returns @code{#TRUE} if either or both arguments are @code{#TRUE},
 otherwise returns @code{#FALSE}.
- @item not(@var{bool})
+@item not(@var{bool})
   Returns @code{#TRUE} if @var{bool} is @code{#FALSE}; @code{#FALSE} if
 @code{#TRUE}.
 
 
 @findex iserr
 @findex isnum
- @item iserr(@var{val})
+@item iserr(@var{val})
    returns @code{#TRUE} if @var{val} is an error, @code{#FALSE}
 otherwise.  
 @item isnum(@var{val})
@@ -96,15 +96,15 @@ value of -12.34:
 
 
 @table @code
- @item abs(@var{x})
-  @findex abs
+@item abs(@var{x})
+@findex abs
   Returns the absolute value of @var{x}.
 
- @item negate(@var{x})
-  @findex negate
+@item negate(@var{x})
+@findex negate
   Returns  -@var{x}.
 
- @item int(@var{x}) 
+@item int(@var{x}) 
 @code{int()} converts @var{x} to an integer by truncating
 the fractional part.  For instance,
 @example
@@ -112,7 +112,7 @@ the fractional part.  For instance,
            int(-2.3)    @result{}  -2
 @end example
 
- @item ceil(@var{x})
+@item ceil(@var{x})
   @code{ceil()} replaces @var{x} by the least integer greater than or
 equal to @var{x}.
 @example
@@ -120,7 +120,7 @@ equal to @var{x}.
            ceil(-2.3)    @result{}  -2
 @end example
 
- @item floor(@var{x})
+@item floor(@var{x})
  @code{floor()} replaces @var{x} by the largest integer less than or
 equal to @var{x}.
 @example
@@ -128,31 +128,31 @@ equal to @var{x}.
            floor(-2.3)    @result{}  -3
 @end example
 
-  @findex int
-  @findex ceil
-  @findex floor
+@findex int
+@findex ceil
+@findex floor
 
- @item log(@var{x})
+@item log(@var{x})
 The natural log  of @var{x}.  If @var{x} is negative, the result is 
 @samp{#MINUS_INFINITY}, and the cell displays is @samp{#OUT_OF_RANGE}.
-  @findex log
+@findex log
 
- @item exp(@var{x})
+@item exp(@var{x})
 The  exponential of @var{x}
-  @findex exp
+@findex exp
 
- @item log10(@var{x})
+@item log10(@var{x})
  The log base 10 of @var{x}.  If @var{x} is negative, the result is 
 @samp{#MINUS_INFINITY}, and the cell displays is @samp{#OUT_OF_RANGE}.
-  @findex log10
+@findex log10
 
- @item sqrt(@var{x})
+@item sqrt(@var{x})
   The square root of @var{x}.  If @var{x} is negative, the error message
 is @samp{#OUT_OF_RANGE}.
-  @findex sqrt
+@findex sqrt
 
- @item rnd(@var{x})
-  @findex rnd
+@item rnd(@var{x})
+@findex rnd
   Generates a random integer from 0 to @var{x}-1.  This is updated
 regularly. This can get annoying. To change the time that it is updated
 from 1 second to 10 seconds, type
@@ -161,9 +161,9 @@ from 1 second to 10 seconds, type
 @end example
 
 
- @item fixed(@var{x}, @var{places})
+@item fixed(@var{x}, @var{places})
   Rounds @var{x} to @var{places} decimal places.
-  @findex fixed
+@findex fixed
 @end table
 
 
@@ -175,49 +175,51 @@ from 1 second to 10 seconds, type
 @end ifhtml
 
 @table @code
- @item pi()
-  Constant; 15 decimals of  @ifinfo
+@item pi()
+  Constant; 15 decimals of 
+@ifinfo
 pi,
 @end ifinfo
 @tex
 $\pi$,
 @end tex
 3.141592653589793.
- @item sin(@var{ang}) 
+@item sin(@var{ang}) 
   The sine of angle @var{ang} (in radians).
-  @findex sin
+@findex sin
 
- @item cos(@var{ang})
+@item cos(@var{ang})
   The  cosine of angle @var{ang} (in radians).
-  @findex cos
+@findex cos
 
- @item tan(@var{ang})
+@item tan(@var{ang})
   The  tangent of angle @var{ang} (in radians).
-  @findex tan
+@findex tan
 
- @item asin(@var{val})
-  @findex asin
+@item asin(@var{val})
+@findex asin
   The arc sine (in radians) of @var{val}.
 
- @itemx acos(@var{val})
-  @findex acos
+@itemx acos(@var{val})
+@findex acos
   The arc  cosine (in radians) of @var{val}.
 
- @item atan(@var{val})
-  @findex atan
+@item atan(@var{val})
+@findex atan
   The arc  tangent (in radians) of @var{val}.
 
- @item dtr(@var{deg})
-  @findex dtr
+@item dtr(@var{deg})
+@findex dtr
   @code{dtr} converts degrees to radians.
 
- @item rtd(@var{rad})
-  @findex rtd
+@item rtd(@var{rad})
+@findex rtd
   @code{rtd} converts radians  to degrees.
 
- @item atan2(@var{y}, @var{x})
+@item atan2(@var{y}, @var{x})
   Expanded arc tangent; returns the arc tangent (in radians) of
-@w{@var{y} / @var{x}}.  The range of @code{atan2} is @ifinfo
+@w{@var{y} / @var{x}}.  The range of @code{atan2} is
+@ifinfo
 (-pi..pi).
 @end ifinfo
 @tex
@@ -274,8 +276,8 @@ functions.
 
 
 @table @code
- @item sum(@var{vr1}, ...)
-  @findex sum
+@item sum(@var{vr1}, ...)
+@findex sum
   The sum  of the given values.  Each value can be a numeric
 value or a range.
 @table @kbd
@@ -288,8 +290,8 @@ value or a range.
 @end table
 
 
- @item prod(@var{vr1}, ...)
-  @findex prod
+@item prod(@var{vr1}, ...)
+@findex prod
   The product  of the given values.  Each value can be a numeric
 value or a range.
 @table @kbd
@@ -302,8 +304,8 @@ value or a range.
 @end table
 
 
- @item count(@var{vr1}, ...)
-  @findex count
+@item count(@var{vr1}, ...)
+@findex count
    The number of numeric values found among the arguments. In the
 example, assume that the first row and column are not numbers.
 @table @kbd
@@ -318,8 +320,8 @@ example, assume that the first row and column are not numbers.
 
 
 
- @item max(@var{vr1}, ...)
-  @findex max
+@item max(@var{vr1}, ...)
+@findex max
    The maximum  value of all the arguments.  Non-numeric values are ignored.
 @table @kbd
 @item 8
@@ -331,8 +333,8 @@ example, assume that the first row and column are not numbers.
 @end table
 
 
- @item min(@var{vr1}, ...)
-  @findex min
+@item min(@var{vr1}, ...)
+@findex min
    The  minimum value of all the arguments.
 @table @kbd
 @item 2
@@ -343,8 +345,8 @@ example, assume that the first row and column are not numbers.
         @@min(B2.B5,C4.C5)
 @end table
 
- @item avg(@var{vr1}, ...)
-  @findex avg
+@item avg(@var{vr1}, ...)
+@findex avg
   The average of the given values.  The sum of the numerical values in
 the arguments is divided by the number of numeric values, not by the
 number of cells.
@@ -357,8 +359,8 @@ number of cells.
         @@avg(B2.B5,C4.C5)
 @end table
 
- @item std(@var{vr1}, ...)
-  @findex std
+@item std(@var{vr1}, ...)
+@findex std
   The @emph{sample} standard deviation.  To get the population standard
 deviation, use @code{@@sqrt(@@var(...))}.
 @table @kbd
@@ -371,10 +373,10 @@ deviation, use @code{@@sqrt(@@var(...))}.
 @end table
 
 
- @item var(@var{vr1}, ...)
+@item var(@var{vr1}, ...)
   The population variance of the arguments.  To get the sample variance,
 use @code{@@std(...)^2}.
- @findex var
+@findex var
 @table @kbd
 @item 4.75
         @@var(B2.B5)
@@ -408,51 +410,51 @@ loaded before the string package is loaded, things will fail
 (silently!).  This is a bug.
 
 @table @code
- @item len(@var{str})
-  @findex len
+@item len(@var{str})
+@findex len
   Returns the number of characters in @var{str}.
- @item strupr(@var{str})
-  @findex strupr
+@item strupr(@var{str})
+@findex strupr
   Converts @var{str} to all upper  case.
- @item strlwr(@var{str})
-  @findex strlwr
+@item strlwr(@var{str})
+@findex strlwr
   Converts @var{str} to all  lower case.
- @item strcap(@var{str})
-  @findex strcap
+@item strcap(@var{str})
+@findex strcap
   Capitalizes each word in @var{str}.
- @item trim(@var{trim})
-  @findex trim
+@item trim(@var{trim})
+@findex trim
   String beautifier.  Trims extra spaces and non-ASCII characters from
 @var{str}.
- @item find(@var{str1}, @var{str2}, @var{pos})
-  @findex find
+@item find(@var{str1}, @var{str2}, @var{pos})
+@findex find
   Returns the index at or beyond @var{pos} where @var{str2} appears in
 @var{str1} @footnote{Actually, due to a bug in version 1.5 @var{str1} is
 searched for in @var{str2}.}.  If @var{str2} does not appear at or
 beyond @var{pos}, 0 is returned.
- @item substr(@var{pos1}, @var{pos2}, @var{str})
-  @findex substr
+@item substr(@var{pos1}, @var{pos2}, @var{str})
+@findex substr
   Extracts the substring from index @var{pos1} through @var{pos2} of
 @var{str}.  Positive indices, starting with 1, count from the start of
 the string, and negative indices (from -1) count from the end of the
 string.  @var{pos1} must occur at or before @var{pos2}.
- @item mid(@var{str}, @var{pos}, @var{len})
-  @findex mid
+@item mid(@var{str}, @var{pos}, @var{len})
+@findex mid
   Extracts the substring of @var{len} characters starting at @var{pos} in
 @var{str}.  The substring is truncated if it begins or extends beyond
 the end of @var{str}@footnote{In version 1.5 this function counts
 indices from 0 instead of 1 as with other string functions; this is
 probably a bug.}.
- @item edit(@var{str}, @var{pos1}, @var{pos2})
-  @findex edit
+@item edit(@var{str}, @var{pos1}, @var{pos2})
+@findex edit
   Deletes the substring from @var{pos1} through @var{pos2} of @var{str}.
 Negative indices can be used as with @code{substr}.
- @item repeat(@var{str}, @var{num})
-  @findex repeat
+@item repeat(@var{str}, @var{num})
+@findex repeat
   Returns a string of @var{num} concatenations of @var{str} with itself;
 e.g., @code{repeat("foo", 2)} returns @code{"foofoo"}.
- @item concat(@var{vr1}, ...)
-  @findex concat
+@item concat(@var{vr1}, ...)
+@findex concat
   Returns the concatenation of all its arguments.  An argument may be a
 range, in which case the cell values in the range are concatenated.
 @end table
@@ -474,53 +476,54 @@ Some of them are in the `cells' package; if Oleo is compiled with
 @samp{-DUSE_DLD}, the cells package must be loaded first.
 
 @table @code
- @item row()
- @itemx col()
-  @findex row
-  @findex col
+@item row()
+@itemx col()
+@findex row
+@findex col
   The row or column of the cell the expression is in.
- @item rows(@var{rng})
- @itemx cols(@var{rng})
-  @findex rows
-  @findex cols
+@item rows(@var{rng})
+@itemx cols(@var{rng})
+@findex rows
+@findex cols
   The number of rows or columns in @var{rng}.
- @item my(@var{key})
-  @findex my
+@item my(@var{key})
+@findex my
   Returns information about the cell containing the expression according
 to the key string @var{key}.  Valid values for @var{key} are:
+
 @c should this be @code or @samp?
-  @table @code
-   @item "row"
+@table @code
+@item "row"
     The cell's row address (an integer).
-   @item "column"
+@item "column"
     The cell's column address.
-   @item "width"
+@item "width"
     Width of the cell.
-   @item "lock"
-   @itemx "protection"
+@item "lock"
+@itemx "protection"
     @code{"locked"} or @code{"unlocked"}. 
-   @item "justify"
-   @itemx "alignment"
+@item "justify"
+@itemx "alignment"
     @code{"left"}, @code{"right"}, @code{"center"} or @code{"default"}.
-   @item "format"
-   @itemx "fmt"
+@item "format"
+@itemx "fmt"
     @code{"default"}, @code{"user-1"}, etc.
-   @item "type"
+@item "type"
     The type of the value of the cell: @code{"error"}, @code{"boolean"},
 @code{"float"}, @code{"integer"}, @code{"null"}, @code{"unknown"}, etc.
-   @item "formula"
+@item "formula"
     A string of the cell's current formula.
-   @item "value"
+@item "value"
     The cell's current value.
 @end table
 
 Any other value generates @code{#BAD_INPUT}.
- @item curcell(@var{key})
-  @findex curcell
+@item curcell(@var{key})
+@findex curcell
   Same as @code{my()}, but returns information about the cell where the
 cell-cursor is.
- @item cell(@var{row}, @var{col}, @var{key})
-  @findex cell
+@item cell(@var{row}, @var{col}, @var{key})
+@findex cell
   Same as @code{my()}, but for the cell at (@var{row}, @var{col}).  Be
 careful about the indices in @code{a0} mode.  The cell in row 2, column
 1 is @code{A2}, not @code{B1}.
@@ -542,39 +545,39 @@ from 1 in column-major order; e.g., in the range @code{r1:2c1:3} cell
 etc.
 
 @table @code
- @item member(@var{rng}, @var{val})
-  @findex member
+@item member(@var{rng}, @var{val})
+@findex member
   Returns the index of the first cell in @var{rng} that contains value
 @var{val}, or 0 if no cells contain it.  @var{val} may be an error
 value. 
- @item smember(@var{rng}, @var{str})
-  @findex smember
+@item smember(@var{rng}, @var{str})
+@findex smember
   Search for a substring.  Returns the index of the first cell in
 @var{rng} that is a substring of @var{str}, or 0 if no cells are
 contained in @var{str}.  If @var{str} is empty, it matches empty cells
 as well @footnote{An empty cell is a cell with no value; a cell with an
 empty @emph{string} value (@code{""}) would match anyway, since an empty
 string is a substring of an empty string.}.
- @item members(@var{rng}, @var{str})
-  @findex members
+@item members(@var{rng}, @var{str})
+@findex members
   Like @code{members()}, but vice-versa: matches the first cell with a
 substring of @var{str} (i.e., @var{str} is contained in the cell).  If
 @var{str} is empty, empty cells are still ignored (unlike
 @code{members()}).
- @item pmember(@var{rng}, @var{str})
- @itemx memberp(@var{rng}, @var{str})
-  @findex pmember
-  @findex memberp
+@item pmember(@var{rng}, @var{str})
+@itemx memberp(@var{rng}, @var{str})
+@findex pmember
+@findex memberp
   Same as @code{smember()} and @code{members()}, respectively, but these
 search for an @emph{initial} string @var{str} of the cells in @var{rng}.
- @item index(@var{rng}, @var{index})
- @itemx index(@var{rng}, @var{rowoffset}, @var{coloffset})
-  @findex index
+@item index(@var{rng}, @var{index})
+@itemx index(@var{rng}, @var{rowoffset}, @var{coloffset})
+@findex index
   The first form returns the contents of the cell at index @var{index}
 in @var{rng}.  The second form returns the cell in @var{rng} that is
 @var{rowoffset} rows and @var{coloffset} columns from the upper left.
- @item oneof(@var{choice}, @var{val1}, ...)
-  @findex oneof
+@item oneof(@var{choice}, @var{val1}, ...)
+@findex oneof
   Case expression.  Returns @var{val1} if @var{choice} is 1, the next
 value if 2, etc.  If @var{choice} is not a valid integer in the
 appropriate range, @code{#OUT_OF_RANGE} is returned.  If no value
@@ -585,18 +588,18 @@ arguments must be values; ranges are not allowed.
   These functions are used to index into a table of entries:
 
 @table @code
- @item hlookup(@var{rng}, @var{num}, @var{rowoffset})
-  @findex hlookup
+@item hlookup(@var{rng}, @var{num}, @var{rowoffset})
+@findex hlookup
   Scans the top row of @var{rng} looking for a number which is greater
 than @var{num}, then returns the value in the cell that is
 @var{rowoffset} rows down from the top of the range.
- @item vlookup(@var{rng}, @var{num}, @var{coloffset})
-  @findex vlookup
+@item vlookup(@var{rng}, @var{num}, @var{coloffset})
+@findex vlookup
   Like @code{vlookup()}, but vertically: scans the first column of
 @var{rng} for a value greater than @var{num}, and returns the cell value
 @var{coloffset} columns to the right.
- @item vlookup_str(@var{rng}, @var{str}, @var{coloffset})
-  @findex vlookup_str
+@item vlookup_str(@var{rng}, @var{str}, @var{coloffset})
+@findex vlookup_str
   Like @code{vlookup()}, but looks for string @var{str}.
 @end table
 
@@ -612,69 +615,69 @@ than @var{num}, then returns the value in the cell that is
 @end ifhtml
 
 @table @code
- @item pmt(@var{p}, @var{r}, @var{t})
-  @findex pmt
+@item pmt(@var{p}, @var{r}, @var{t})
+@findex pmt
   Payment per period for a loan of principle @var{p} at rate @var{r} for
 @var{t} payments.
- @item pv(@var{pmt}, @var{r}, @var{term})
-  @findex pv
+@item pv(@var{pmt}, @var{r}, @var{term})
+@findex pv
   Present value of an investment that pays $@var{pmt} at the end of each
 of @var{term} periods with a discount rate (interest) of @var{r}.
- @item npv(@var{rng}, @var{r})
-  @findex npv
+@item npv(@var{rng}, @var{r})
+@findex npv
   Net present value of an investment which will pay uneven payments.
 The term is calculated from the number of cells in range @var{rng}.
- @item irr(@var{rng}, @var{guess})
-  @findex irr
+@item irr(@var{rng}, @var{guess})
+@findex irr
   Internal rate of return.  This function is untested and should not be
 trusted.  Returns @code{#BAD_INPUT} if it does not converge for the
 given input.
- @item fv(@var{pmt}, @var{r}, @var{term})
-  @findex fv
+@item fv(@var{pmt}, @var{r}, @var{term})
+@findex fv
   Future value of an annuity.
- @item rate(@var{fut}, @var{pres}, @var{term})
-  @findex rate
+@item rate(@var{fut}, @var{pres}, @var{term})
+@findex rate
   Interest rate required to turn $@var{pres} into $@var{fut} in
 @var{term} periods.
- @item term(@var{pmt}, @var{r}, @var{put})
-  @findex term
+@item term(@var{pmt}, @var{r}, @var{put})
+@findex term
   Number of periods required to collect $@var{fut} in payments of
 $@var{pmt}, with an interest rate of @var{r}.
- @item cterm(@var{r}, @var{fut}, @var{pres})
-  @findex cterm
+@item cterm(@var{r}, @var{fut}, @var{pres})
+@findex cterm
   Number of periods required to collect $@var{fut} from a single deposit
 of $@var{pres}, at an interest rate of @var{r}.
- @item sln(@var{cost}, @var{scrap}, @var{life})
-  @findex sln
+@item sln(@var{cost}, @var{scrap}, @var{life})
+@findex sln
   Straight line depreciation of an asset that cost $@var{cost} when new,
 can be sold for $@var{scrap}, and will last for @var{life} periods.
- @item syd(@var{cost}, @var{scrap}, @var{life}, @var{per})
-  @findex syd
+@item syd(@var{cost}, @var{scrap}, @var{life}, @var{per})
+@findex syd
   Sum-of-the-digits depreciation of an asset that cost $@var{cost}, can
 be sold for $@var{scrap} and lasts @var{life}, in period @var{per}.
- @item ddb(@var{cost}, @var{scrap}, @var{life}, @var{per})
-  @findex ddb
+@item ddb(@var{cost}, @var{scrap}, @var{life}, @var{per})
+@findex ddb
   Double-declining-balance depreciation; similar to @code{syd()}.
- @item anrate(@var{pmt}, @var{pres}, @var{term})
-  @findex anrate
+@item anrate(@var{pmt}, @var{pres}, @var{term})
+@findex anrate
   Undocumented.
- @item anterm(@var{pmt}, @var{prin}, @var{r})
-  @findex anterm
+@item anterm(@var{pmt}, @var{prin}, @var{r})
+@findex anterm
   Undocumented.
- @item balance(@var{prin}, @var{r}, @var{term}, @var{per})
-  @findex balance
+@item balance(@var{prin}, @var{r}, @var{term}, @var{per})
+@findex balance
   Undocumented.
- @item paidint(@var{prin}, @var{r}, @var{term}, @var{per})
-  @findex paidint
+@item paidint(@var{prin}, @var{r}, @var{term}, @var{per})
+@findex paidint
   Undocumented.
- @item kint(@var{prin}, @var{r}, @var{term}, @var{per})
-  @findex kint
+@item kint(@var{prin}, @var{r}, @var{term}, @var{per})
+@findex kint
   Undocumented.
- @item kprin(@var{prin}, @var{r}, @var{term}, @var{per})
-  @findex kprin
+@item kprin(@var{prin}, @var{r}, @var{term}, @var{per})
+@findex kprin
   Undocumented.
- @item compbal(@var{prin}, @var{r}, @var{term})
-  @findex compbal
+@item compbal(@var{prin}, @var{r}, @var{term})
+@findex compbal
   Undocumented.
 @end table
 
@@ -706,98 +709,98 @@ result.
 
 
 @table @code
- @item now()
-  @findex now
+@item now()
+@findex now
   Time of day.  Returns the current time in seconds since Jan 1 1970.
- @item ctime(@var{time})
-  @findex ctime
+@item ctime(@var{time})
+@findex ctime
   Converts @var{time} into a date/time string.  @var{time} is seconds
 since the the epoch, as returned by @code{now()}.
- @item hms_to_time(@var{hours}, @var{minutes}, @var{seconds})
- @item dhms_to_time(@var{days}, @var{hours}, @var{minutes}, @var{seconds})
-  @findex hms_to_time
-  @findex dhms_to_time
+@item hms_to_time(@var{hours}, @var{minutes}, @var{seconds})
+@item dhms_to_time(@var{days}, @var{hours}, @var{minutes}, @var{seconds})
+@findex hms_to_time
+@findex dhms_to_time
   Converts @var{days}, @var{hours}, @var{mins}, @var{seconds} to a count
 of seconds.
- @item time_to_d(@var{time})
- @item time_to_h(@var{time})
- @item time_to_m(@var{time})
- @item time_to_s(@var{time})
-  @findex time_to_d
-  @findex time_to_h
-  @findex time_to_m
-  @findex time_to_s
+@item time_to_d(@var{time})
+@item time_to_h(@var{time})
+@item time_to_m(@var{time})
+@item time_to_s(@var{time})
+@findex time_to_d
+@findex time_to_h
+@findex time_to_m
+@findex time_to_s
   Returns the number of days, hours (0..23), minutes (0..59), or seconds
 (0..59) in @var{time} seconds.
- @item ymd(@var{year}, @var{month}, @var{day})
- @item ymd_dst(@var{year}, @var{month}, @var{day}, @var{dst})
-  @findex ymd
-  @findex ymd_dst
+@item ymd(@var{year}, @var{month}, @var{day})
+@item ymd_dst(@var{year}, @var{month}, @var{day}, @var{dst})
+@findex ymd
+@findex ymd_dst
   Convert @var{year}, @var{month}, and @var{day} to the number of
 seconds since January 1, 1970 (typically).  The conversion assumes the
 local time zone.  For @code{ymd_dst()}, if @var{dst} is positive,
 daylight savings time is assumed; if 0, standard time; and if negative,
 neither (i.e., the same as @code{ymd()}).
- @item local_year(@var{time})
- @item local_month(@var{time})
-  @findex local_year
-  @findex local_month
+@item local_year(@var{time})
+@item local_month(@var{time})
+@findex local_year
+@findex local_month
   For a time in seconds (e.g., as returned by @code{now()}) return its
 year or month in the local timezone.
- @item local_date(@var{time})
-  @findex local_date
+@item local_date(@var{time})
+@findex local_date
   Returns the date in the local timezone of @var{time}.
- @item local_hour(@var{time})
- @item local_min(@var{time})
- @item local_sec(@var{time})
-  @findex local_hour
-  @findex local_min
-  @findex local_sec
+@item local_hour(@var{time})
+@item local_min(@var{time})
+@item local_sec(@var{time})
+@findex local_hour
+@findex local_min
+@findex local_sec
   Returns the hour, minutes or seconds in the local timezone of
 @var{time}.
- @item local_isdst(@var{time})
-  @findex local_isdst
+@item local_isdst(@var{time})
+@findex local_isdst
   Returns @var{dst} in the local timezone for @var{time}.  The return is
 positive if daylight savings time is in effect, 0 otherwise.
- @item local_yday(@var{time})
- @item local_wday(@var{time})
-  @findex local_yday
-  @findex local_wday
+@item local_yday(@var{time})
+@item local_wday(@var{time})
+@findex local_yday
+@findex local_wday
   Returns the give day-of-year (0..364 or 0..365 for leap years) or
 day-of-week (0..6) in the local timezone for @var{time}.
- @item gmt_year(@var{time})
- @item gmt_month(@var{time})
- @item gmt_date(@var{time})
-  @findex gmt_year
-  @findex gmt_month
-  @findex gmt_date
+@item gmt_year(@var{time})
+@item gmt_month(@var{time})
+@item gmt_date(@var{time})
+@findex gmt_year
+@findex gmt_month
+@findex gmt_date
   Returns the year, month, or day in Greenwich of @var{time}.
- @item gmt_hour(@var{time})
- @item gmt_min(@var{time})
- @item gmt_sec(@var{time})
-  @findex gmt_hour
-  @findex gmt_min
-  @findex gmt_sec
+@item gmt_hour(@var{time})
+@item gmt_min(@var{time})
+@item gmt_sec(@var{time})
+@findex gmt_hour
+@findex gmt_min
+@findex gmt_sec
   Returns the hour, minutes or seconds in Greenwich of @var{time}.
- @item gmt_isdst(@var{time})
-  @findex gmt_isdst
+@item gmt_isdst(@var{time})
+@findex gmt_isdst
   Returns a positive value if daylight savings time is in effect in
 Greenwich @var{time}, 0 otherwise.
- @item gmt_yday(@var{time})
- @item gmt_wday(@var{time})
-  @findex gmt_yday
-  @findex gmt_wday
+@item gmt_yday(@var{time})
+@item gmt_wday(@var{time})
+@findex gmt_yday
+@findex gmt_wday
   Returns the day-of-year (0..365) or day-of-week (0..6) in Greenwich.
- @item get_date(@var{date})
- @item posix_date(@var{date})
-  @findex get_date
-  @findex posix_date
+@item get_date(@var{date})
+@item posix_date(@var{date})
+@findex get_date
+@findex posix_date
   Parse a string date and return its time (seconds since epoch).  The
 syntax of @var{date} is the same as is understood by GNU tar or GNU date
 for @code{get_date()}, and as per the Posix standard for
 @code{posix_date()}.
- @item strftime(@var{format}, @var{time})
-  @findex strftime
+@item strftime(@var{format}, @var{time})
+@findex strftime
   Returns a string according to @var{format} describing @var{time} (as
 returned by @code{now()}).  This function is implemented by the C
 library function @code{strftime()}.  The following documentation
@@ -818,91 +821,91 @@ Supports a superset of the ANSI C field specifiers.
 
 Literal character fields:
 @table @samp
- @item %
+@item %
   @samp{%}
- @item n
+@item n
   newline
- @item t
+@item t
   tab
 @end table
 
 Numeric modifiers (a nonstandard extension):
 @table @samp
- @item -
+@item -
   do not pad the field
- @item _
+@item _
   pad the field with spaces
 @end table
 
 Time fields:
 @table @samp
- @item %H
+@item %H
   hour (@samp{00}..@samp{23})
- @item %I
+@item %I
   hour (@samp{01}..@samp{12})
- @item %k
+@item %k
   hour (@samp{ 0}..@samp{23})
- @item %l
+@item %l
   hour (@samp{ 1}..@samp{12})
- @item %M
+@item %M
   minute (@samp{00}..@samp{59})
- @item %p
+@item %p
   locale's AM or PM
- @item %r
+@item %r
   time, 12-hour (@samp{@var{hh}:@var{mm}:@var{ss} A/PM})
- @item %R
+@item %R
   time, 24-hour (@samp{@var{hh}:@var{mm}})
- @item %S
+@item %S
   second (@samp{00}..@samp{61})
- @item %T
+@item %T
   time, 24-hour (@samp{@var{hh}:@var{mm}:@var{ss}})
- @item %X
+@item %X
   locale's time representation (@samp{%H:%M:%S})
- @item %Z
+@item %Z
   time zone (EDT), or nothing if no time zone is determinable
 @end table
 
 Date fields:
 @table @samp
- @item %a
+@item %a
   locale's abbreviated weekday name (@samp{Sun}..@samp{Sat})
- @item %A
+@item %A
   locale's full weekday name, variable length
 (@samp{Sunday}..@samp{Saturday})
- @item %b
+@item %b
   locale's abbreviated month name (@samp{Jan}..@samp{Dec})
- @item %B
+@item %B
   locale's full month name, variable length
 (@samp{January}..@samp{December})
- @item %c
+@item %c
   locale's date and time (@samp{Sat Nov 04 12:02:33 EST 1989})
- @item %C
+@item %C
   century (@samp{00}..@samp{99})
- @item %d
+@item %d
   day of month (@samp{01}..@samp{31})
- @item %e
+@item %e
   day of month (@samp{ 1}..@samp{31})
- @item %D
+@item %D
   date (@samp{@var{mm}/@var{dd}/@var{yy}})
- @item %h
+@item %h
   same as @samp{%b}
- @item %j
+@item %j
   day of year (@samp{001}..@samp{366})
- @item %m
+@item %m
   month (@samp{01}..@samp{12})
- @item %U
+@item %U
   week number of year with Sunday as first day of week
 (@samp{00}..@samp{53})
- @item %w
+@item %w
   day of week (@samp{0}..@samp{6})
- @item %W
+@item %W
   week number of year with Monday as first day of week
 (@samp{00}..@samp{53})
- @item %x
+@item %x
   locale's date representation (@samp{@var{mm}/@var{dd}/@var{yy}})
- @item %y
+@item %y
   last two digits of year (@samp{00}..@samp{99})
- @item %Y
+@item %Y
   year (@samp{1970}...)
 @end table
 @end table
