--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
-$Id: ChangeLog,v 1.116 1999/11/04 12:51:11 danny Exp $
+$Id: ChangeLog,v 1.117 1999/11/10 00:22:44 danny Exp $
+
+Wed 10 Nov 01:18:09 1999, Danny
+	* Fix a couple of printing bugs.
+	* Add files to create a small table in MySQL (examples/create_koers.txt),
+	  fill it with data (examples/data.sql), and a spreadsheet to read from
+	  it (examples/mysql.oleo).
 
 Thu  4 Nov 13:49:26 1999, Danny
 	* src/afm.c - implement based on the AFM spec by Adobe.
